--- a/index.html
+++ b/index.html
@@ -6,14 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="./css/index.css">
+    <link rel="icon" href="./multimedia/icon.png">
     <title>Document</title>
 </head>
 
 <body>
     <main>
         <div class="hero flex--text">
-            <img src="logo_absys_sinfondo.png" alt="">
+            <img src="./multimedia/logo_absys_sinfondo.png" alt="">
             <h1>Adaptative and Bioinspired Systems Research Group</h1>
             <p>The objectives of our research group is the design and implementation of Adaptive and Bioinspired Systems
                 to solve optimization and modelling problems. In the past we worked in the application of ideas taken
@@ -22,18 +24,21 @@
                 and embedded systems optimization problems. In particular, since 2011 we have been developing our
                 research around Artificial Pancreas. You can see more information here.</p>
             <nav>
-                <a href="">People</a>
-                <a href="">Research</a>
-                <a href="">Projects</a>
-                <a href="">Conferences & Workshops</a>
-                <a href="">Special issues & Books</a>
-                <a href="">Software</a>
+                <a class="link_menu" href="">People</a>
+                <a class="link_menu" href="">Research</a>
+                <a class="link_menu" href="">Projects</a>
+                <a class="link_menu" href="">Conferences & Workshops</a>
+                <a class="link_menu" href="">Special issues & Books</a>
+                <a class="link_menu" href="">Software</a>
+                <a class="link_menu" href="">Contact</a>
             </nav>
             <div class="social">
-                <img src="twitter.png" alt="" style="height: 40px;">
-                <img src="facebook.png" alt="" style="height: 40px;">
-                <img src="youtube.png" alt="" style="height: 40px;">
-                <img src="git.png" alt="" style="height: 40px;">
+                <ul>
+                    <li><a class="link_social" href="" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                    <li><a class="link_social" href="https://github.com/ABSysGroup" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a></li>
+                    <li><a class="link_social" href="https://mobile.twitter.com/absysgroup" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                    <li><a class="link_social" href="https://www.youtube.com/channel/UCXwfSaoEeht7lEXRBBdieBg" target="_blank"><i class="fa fa-youtube-play" aria-hidden="true" ></i></a></li>
+                </ul>
             </div>
         </div>
     </main>
